styles.css
html {
    overflow-x: hidden;
}

body {
    overflow-x: hidden;
}

header {
    background-color: #2D3A2F;
    color: #f5f5f5;
    padding: 8%;
    padding-bottom: 4%;
}

footer {
    background-color: #2D3A2F;
    color: #f5f5f5;
}

h1 {
    margin-top: 0px;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 400;
    font-size: 3.5rem;
    padding-bottom: 2rem;
}

h2 {
    font-family: 'Josefin Slab', serif;
    font-weight: 400;
    font-size: 1.5rem;
}

header img {
    width: 65%;
    z-index: 2;
}

header p {
    position: absolute;
    left: 12rem;
    top: 20rem;
    font-family: 'Josefin Sans', sans-serif;
    font-style: italic;
    font-weight: 200;
}

main {
    background-color: #f5f5f5;
    padding: 8%;
}

h3 {
    color: #2D3A2F;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 300;
    font-size: 1.25rem;
    margin-bottom: 2rem;
    margin-top: 2rem;
}

main .col-4 p, main .col-4 ul {
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 600;
    font-color: #2D3A2F;
}

main .col-8 p {
    font-family: 'Josefin Slab', serif;
    font-color: #2D3A2F;
}

a {
    color: #C5B946;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
}

.sticky + .content {
    padding-top: 160px;
}

.positionGroup {
    border-left: 1px solid #f5f5f5;
    border-radius: 5px;
    padding-left: 10px;
}

#galleryContent img {
    width: 100%;
}

#cv {
    height: 15em;
}

#navbar {
    background-color: #2D3A2F;
    color: #2D3A2F;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 300;
    font-size: 1.25rem;
}

#navbar a.active {
    background-color: #f5f5f5;
    color: #2D3A2F;
}

#navbar li {
    max-height: 47px;
}

#headshot {
    border-radius: 50%;
    max-width: 50%;
    margin-left: 25%;
    /* border: 10px solid #2D3A2F; */
}

